dnl Process this file with autoconf to produce a configure script.
AC_INIT(bsp.c)

dnl --- Fire up automake
AM_INIT_AUTOMAKE(bsp,5.1)
AM_CONFIG_HEADER(config.h)

dnl C compiler options
CFLAGS="-Wall -O2 -fomit-frame-pointer -ffast-math"
AC_ARG_ENABLE(debug,[  --enable-debug     enables debugging with gdb],
CFLAGS="-Wall -g -ffast-math"
)
AC_ARG_ENABLE(profile,[  --enable-profile   turns on profiling],
CFLAGS="-Wall -pg -ffast-math"
)


dnl Checks for programs.
AC_PROG_CC
AC_C_INLINE
AC_C_BIGENDIAN
AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB(m, sqrt)

dnl Debugging
AC_ARG_ENABLE(dmalloc,[  --enable-dmalloc     use the dmalloc heap debug library],AC_CHECK_LIB(dmalloc,malloc))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(isatty unlink tmpfile)

AC_OUTPUT(Makefile test-wads/Makefile DOS/Makefile Win32/Makefile)
